# test-action

./: README.md  pyproject.toml
.github/workflows/: blank.yml  pypi-publish.yml
cmctest/: __init__.py
